tests/rosetta/out/Dart/animation.error
run error: exit status 254
../../tests/rosetta/out/Dart/animation.dart:18:35: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
      line = line + msg.substring(idx, (idx as num) + 1);
                                  ^
../../tests/rosetta/out/Dart/animation.dart:18:53: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
      line = line + msg.substring(idx, (idx as num) + 1);
                                                    ^
../../tests/rosetta/out/Dart/animation.dart:19:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      i = (i as num) + 1;
                     ^
../../tests/rosetta/out/Dart/animation.dart:52:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/animation.dart:81:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/animation.dart:86:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/animation.dart:90:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
